tests/parse-errors/invalidPoeticLiteralAssignment.rock
my heart is nothing without you
